--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@types/lodash": "^4.14.179",
     "@types/nanoid": "^3.0.0",
+    "angular-in-memory-web-api": "^0.13.0",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.1",
     "rxjs": "~7.5.0",
