--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "nanoid": "^3.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+        "@apollo/client": "^3.5.10",
+    "apollo-angular": "^3.0.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-context": "^1.0.20",
+    "graphql": "^16.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
