--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": ["es2020", "dom"],
+    "lib": ["es6", "dom", "es2020"],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
