--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@apollo/client": "^3.5.10",
     "@types/lodash": "^4.14.179",
     "@types/nanoid": "^3.0.0",
+    "@types/uuid": "^8.3.4",
     "angular-in-memory-web-api": "^0.13.0",
-    "lodash": "^4.17.21",
-    "nanoid": "^3.3.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-        "@apollo/client": "^3.5.10",
     "apollo-angular": "^3.0.0",
     "apollo-angular-link-http": "^1.11.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-context": "^1.0.20",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
+    "nanoid": "^3.3.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
